change password of default user; refactoring